# local-cluster

./: .gitignore  Dockerfile  LICENSE  Pulumi.kluster.yaml  Pulumi.local.yaml  Pulumi.yaml  README.md  __main__.py  apply-argocd.sh  docker-compose.yaml  go.mod  go.sum  init-k8s.sh  k3d.yaml  main.go  pyproject.toml  recreate_cluster.sh  root-app.yaml  root.yaml  stack.json  vault.hcl
.github/workflows/: container-image.yaml
apps/: Application-API.yaml  Application-Authelia.yaml  Application-Dashboard.yaml  Application-Dashboards.yaml  Application-ExternalSecrets.yaml  Application-Itsio.yaml  Application-Jupyter.yaml  Application-Postgres.yaml  Application-Prometheus.yaml  Application-Traefik.yaml  Application-Vault.yaml  IngressRoute-ArgoCD.yaml  IngressRoute-Traefik.yaml  duckdns.yaml  enableops-api.yaml  eops-api.yaml
apps/dashboards/: IngressRoute-ArgoCD.yaml  IngressRoute-Dashboard.yaml  IngressRoute-Jupyter.yaml  IngressRoute-Traefik.yaml  IngressRoute-Vault.yaml  Middleware-Dashboard.yaml  Middleware-Traefik.yaml  Middleware-Vault.yaml
apps/local/: kustomization.yaml
argocd/: argocd-install.sh  auth-eu-gcr.sh  root.yaml  secrets-enableops-api-env.sh
charts/python-app/: Chart.yaml  (+1 more)
infrastructure/: kustomization.yaml
proxy/: docker-compose.yaml  traefik.yaml
secrets/: dev-enableops-api-pullsecret.sh  enableops-api-env.sh  local-duckdns.sh  local-enableops.sh  prod-enableops-api-envsecret.sh  prod-enableops-api-pullsecret.sh  prod-enableops.sh
to-migrate/: Application-API.yaml  Application-Authelia.yaml
vault/: config.hcl  docker-compose.yaml
(+67 files in other folders)
